impl auth with jwt and testcode
